# one-reference-architecture

./: .clinerules  .dockerignore  .dockerignore.backup  .gitignore  .windsurfrules  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  CLIENT_ONLY_ARCHITECTURE.md  Cargo.toml  Dockerfile  REARCHITECTURE_PLAN.md  SIMPLIFIED_ARCHITECTURE.md  WARP.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  tuono.config.ts  tuono.config.ts.backup  tuono.config.ts.current-backup  vite.config.ts
.kiro/specs/unified-web-desktop-functionality/: design.md  requirements.md  tasks.md
.roo/rules/: 00-package-manager.md  01-typescript-standards.md  02-rust-standards.md  03-architecture-patterns.md  04-ai-mcp-rag-standards.md
build-tauri/assets/: database-BQqdanHd.js  main-7ZsfICg1.js  main-BOuAc_e8.css  nodefs-lJKRs0Ob.js  opfs-ahp-4Pt7UIbI.js  polyfill-init-CaE8slAE.js
build-tauri/src/: tauri.html
config/: mcp_servers.yaml
config/environments/: development.yaml
containers/examples/: README.md
docs/: MCP_ARCHITECTURE.md  implementation_checklist.md  microsandbox-mcp-integration.md
rust-lib/: Cargo.toml
rust-lib/src/: ai.rs  api.rs  lib.rs  mcp.rs  rag.rs
src/: main.rs  main.tsx  tauri.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_proxy.rs  lib.rs
src/components/: application-container.tsx  architecture-diagram.tsx  bridge-indicator.tsx  dashboard-client-app.tsx  data-page-client.tsx  database-client.tsx  database-error-boundary.tsx  database-page-client.tsx  database-status-indicator.tsx  landing-content.tsx  mermaid-diagram.tsx  root-client-layout.tsx  route-error-boundary.tsx  shared-header.tsx  theme-provider.tsx
src/components/ui/: sidebar.tsx
src/hooks/: use-navigation.ts
src/lib/: database.ts  polyfill-init.ts  wasm-polyfills.ts
src/routes/: __layout.tsx  index.tsx
src/stores/: navigation.ts
src/styles/: globals.css
src/types/: global.d.ts
(+5 files in other folders)
