[package]
name = "shared-handlers"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

# Optional: Add when we implement MCP/AI features
# microsandbox = { version = "0.1", optional = true }
# reqwest = { version = "0.11", features = ["json", "stream"], optional = true }

[features]
default = []
ai = [] # For AI/LLM features
mcp = [] # For MCP server features